<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView 
        android:id="@+id/nick_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/add_title"
		android:textColor="#ffffffff"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    <EditText
        android:id="@+id/edit"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:autoText="false"
        android:capitalize="none"
        android:maxLength="113" 
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <ScrollView android:layout_width="fill_parent"
    			android:layout_height="wrap_content">  
	    <LinearLayout
	        android:id="@+id/layout"
	        android:orientation="vertical"
	        android:layout_width="fill_parent" android:layout_height="wrap_content">    
		    <RadioGroup
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:checkedButton="@+id/hot_com"
		        android:id="@+id/menu">
		        <RadioButton
		            android:text="@string/domain_hot"
		            android:textColor="#ffffffff"
		            android:id="@+id/hot_com"/>
		        <RadioButton
		            android:text="@string/domain_msn_com"
		            android:textColor="#ffffffff"
		            android:id="@+id/msn_com" />
		        <RadioButton
		            android:text="@string/domain_live_com"
		            android:textColor="#ffffffff"
		            android:id="@+id/live_com" />
		        <RadioButton
		            android:text="@string/domain_live_cn"
		            android:textColor="#ffffffff"
		            android:id="@+id/live_cn" />
		        <RadioButton
		            android:text="@string/domain_msn_cn"
		            android:textColor="#ffffffff"
		            android:id="@+id/msn_cn" />		            
		        <RadioButton
		            android:text="@string/domain_other"
		            android:textColor="#ffffffff"
		            android:id="@+id/other" />                    
		    </RadioGroup>
	    </LinearLayout>
    </ScrollView>
        
</LinearLayout>