<RelativeLayout
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  xmlns:android="http://schemas.android.com/apk/res/android">
	<ImageView android:id="@+id/logintitle"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/logintitle"/>  
			  
    <TextView android:id="@+id/usernameT"
	          android:paddingBottom="5sp"
	          android:paddingTop="10sp"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:layout_below="@id/logintitle"
              android:text="@string/edit_email"/>
    	<!--  	  android:textSize="16px" -->
	<LinearLayout android:id="@+id/usernameLinear"
		android:layout_gravity="center_vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/usernameT"
	    android:orientation="horizontal">

	    <EditText android:id="@+id/usernameE" 
	              android:paddingBottom="5dip"
	     		  android:paddingTop="5dip"
	              android:layout_width="fill_parent" 
	              android:layout_height="35dip"
	              android:singleLine="true"
	              android:maxLength="113" 
	              android:layout_weight="1"
	              android:background="@android:drawable/editbox_background"/>
				  
		<Button android:id="@+id/account_btn"
	       android:layout_width="40dip"
	       android:layout_height="35dip"
	       android:background="@drawable/acc_btn"
	       android:layout_below="@id/usernameT"
	       android:layout_toRightOf="@id/usernameE"
	       />		  
	</LinearLayout>

   <View android:id="@+id/empty1"
       android:layout_width="fill_parent"
       android:layout_height="10dip"
       android:layout_below="@+id/usernameLinear"/>  
			  
   <Spinner android:id="@+id/spinner1"
        android:layout_width="190dip"
        android:layout_height="40dip"
        android:drawSelectorOnTop="true"
        android:prompt="@string/setdomain"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/empty1"
    /> 
  
    <TextView android:id="@+id/passwordT" 
              android:paddingBottom="5sp"
     	      android:paddingTop="5sp"
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_below="@+id/spinner1"
              android:text="@string/edit_password"/>

    <EditText android:id="@+id/passwordE" 
              android:paddingBottom="5sp"
     	      android:paddingTop="5sp"
              android:layout_width="fill_parent" 
              android:layout_height="35dip" 
              android:maxLength="16"
              android:singleLine="true"
              android:password="true"
              android:background="@android:drawable/editbox_background"
              android:layout_below="@+id/passwordT"
			  /> 
	
	
   <View android:id="@+id/empty2"
       android:layout_width="fill_parent"
       android:layout_height="10dip"
       android:layout_below="@+id/passwordE"/>  
			  
   <Spinner android:id="@+id/spinner2"
        android:layout_width="190dip"
        android:layout_height="40dip"
        android:drawSelectorOnTop="true"
        android:prompt="@string/text_login_status"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/empty2"
    /> 
	
    <CheckBox android:id="@+id/save"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/spinner2"
       android:text="@string/save_password" />
       
    <CheckBox android:id="@+id/auto1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/save"
       android:text="@string/autologin" />    
       
    <CheckBox android:id="@+id/auto2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/spinner2"
       android:layout_toRightOf="@+id/save"
       android:text="@string/autologin" />                       
  
    <Button android:id="@+id/login" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content" 
              android:layout_centerHorizontal="true"
              android:layout_alignParentBottom="true"
			  android:layout_alignParentRight="true"
              android:text="@string/login"/>
           
</RelativeLayout>