<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/transfersfile"
        android:layout_width="fill_parent"
        android:paddingLeft="10sp"
        android:layout_height="wrap_content"/>  

    <ProgressBar android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dip"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:layout_height="wrap_content"
        android:max="100"/>  
      

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:paddingTop="10sp"
        android:paddingLeft="10sp"
        android:layout_height="wrap_content">

        <Button android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_trans_accept"/>

        <Button android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_trans_reject"/>
        
        <Button android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_trans_cancel"/>  
        
        <TextView android:id="@+id/tranStatus"
	        android:layout_width="fill_parent"
	        android:paddingLeft="10sp"
	        android:layout_height="wrap_content"/>        
    </LinearLayout> 
</LinearLayout>



