<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/white"
	android:id="@+id/register">
	<ImageView 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/logintitle"
       android:id="@+id/register_image"
       />  
    <TextView 
		android:paddingBottom="5sp"
	    android:paddingTop="10sp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_below="@id/register_image"
        android:text="@string/register_username_title"
        android:id="@+id/register_username_title"
        />
	 <EditText 
	    android:paddingBottom="5dip"
	    android:paddingTop="5dip"
	    android:layout_width="fill_parent" 
	    android:layout_height="35dip"
	    android:singleLine="true"
	    android:maxLength="62" 
	    android:layout_weight="1"
	    android:background="@android:drawable/editbox_background"
	    android:layout_below="@id/register_username_title"
	    android:id="@+id/register_username"
	    />
   	 <View 
       android:layout_width="fill_parent"
       android:layout_height="10dip"
       android:layout_below="@id/register_username"
       android:id="@+id/empty1"
       />  
	 <TextView
	 	android:layout_width="wrap_content"
	 	android:layout_height="wrap_content"
	 	android:text="@string/register_email"
	 	android:layout_alignParentRight="true"
	 	android:layout_below="@id/empty1"
	 	android:id="@+id/register_email"
	 	/>		  
     <TextView  
        android:paddingBottom="5sp"
     	android:paddingTop="5sp"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:text="@string/register_password_title"
        android:id="@+id/register_password_title"
        />
     <EditText  
        android:layout_width="fill_parent" 
        android:layout_height="35dip" 
        android:maxLength="16"
        android:singleLine="true"
        android:password="true"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/register_password_title"
        android:id="@+id/register_password"
	    /> 
     <Button 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
        android:text="@string/register_bn"
        android:id="@+id/register_button"
        />
</RelativeLayout>